[Webex 282470] Enable OPTIONS for 3xx (#238)
* Enable Dynamic OPTIONS ping creation for Contact present in 3xx.